--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -50,6 +51,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
+    implementation "androidx.room:room-runtime:2.5.0"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
+    kapt "androidx.room:room-compiler:2.5.0"
 }
